--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,10 @@ body,
     font-family: 'Roboto', sans-serif;
 }
 
+h1,h2 {
+    font-weight:700;
+}
+
 .secondary {
     color:#FF9900;
 }
@@ -113,6 +117,35 @@ nav.navbar-default {
     display: block;
     margin-left: auto;
     margin-right: auto 
+}
+
+.howitworks h3 {
+    text-align:center;
+    font-size:20px;
+}
+
+/* --- Curriculum ---*/
+
+.curriculum {
+    background: #f8f1ed;
+}
+
+ol li {
+    font-size:20px;
+}
+
+.fa {
+    font-size:80px;
+}
+
+.skills {
+    font-size:20px;
+    text-align:center;
+    margin-bottom:20px;
+}
+
+.skills img {
+    width:50%;
 }
 
 
