--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,10 @@ h1,h2 {
     font-weight:700;
 }
 
+h2 {
+  margin-bottom:20px;
+}
+
 .secondary {
     color:#FF9900;
 }
@@ -186,6 +190,29 @@ nav.navbar-default {
     display:block;
     margin:0 auto;
     height:200px;
+    border:10px solid #7b6c45;
+
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
+
+}
+
+.testimonial-text-box {
+  padding:10px 20px;
+  font-size:17px;
+  text-align:justify;
+}
+
+.testimonial-name {
+  text-align: right;
+  font-size:15px;
+}
+
+.center-button {
+  display:block;
+  width:50%;
+  margin:0 auto;
 }
 
 /*.--- btn-green--- */
