--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -215,6 +215,33 @@ nav.navbar-default {
   margin:0 auto;
 }
 
+/*--- FOOTER SECTION ---*/
+
+footer {
+  background:#b6a57d;
+  margin-top:30px;
+  padding-top:20px;
+  font-size:16px;
+  color:#7b6c45;
+}
+
+footer h2 {
+  margin:0;
+  margin-bottom:10px;
+}
+
+footer ul {
+  list-style-type: none;
+  padding:30px 0 0 0 ;
+}
+
+.footer-icon {
+  font-size: 35px;
+  padding:10px;
+}
+
+
+
 /*.--- btn-green--- */
 .btn-green {
   color: #fff;
