--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,8 +23,14 @@ body,
     font-family: 'Roboto', sans-serif;
 }
 
+.navbar-brand {
+  font-family: 'Sanchez', serif;
+}
+
 h1,h2 {
+    font-family: 'Sanchez', serif;
     font-weight:700;
+
 }
 
 h2 {
@@ -56,7 +62,7 @@ h2 {
 
 .cover-text h1 {
     margin: 0;
-    font-size: 70px;
+    font-size: 78px;
     letter-spacing: -3px;
     text-transform: ;
     font-weight:700;
@@ -148,7 +154,7 @@ nav.navbar-default {
 }
 
 .curriculum p{
-    font-size:30px;
+    font-size:28px;
     text-align:right;
 }
 
