--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,12 @@ F22F00
 }
 
 body {
-  padding-top: 70px;
+  padding-top: 50px;
+}
+
+.btn-extra-padding {
+  padding-top:15px;
+  padding-bottom:15px;
 }
 
 html,
@@ -26,15 +31,7 @@ body,
     font-family: 'Roboto', sans-serif;
 }
 
-.btn-extra-padding {
-  padding-top:15px;
-  padding-bottom:15px;
-}
 
-section {
-  padding-top:10px;
-  padding-bottom:20px;
-}
 .navbar-brand {
   font-family: 'Sanchez', serif;
 }
@@ -67,7 +64,6 @@ h2 {
    background-size: cover;
     display: table;
     width: 100%;
-    padding: 0 20%;
     box-shadow:inset 0 0 100px #000;
 }
 
@@ -76,6 +72,7 @@ h2 {
     color: #fff;
     display: table-cell;
     vertical-align: middle;
+    padding: 20px;
 }
 
 .cover-text h1 {
@@ -97,9 +94,10 @@ h2 {
 }
 
 .cover .btn {
- 
-    margin-bottom:20px;
-    width:50%;
+  display:block;
+  width:60%;
+  margin:0 auto;
+  margin-bottom:20px;
 }
 
 
@@ -552,6 +550,11 @@ fieldset[disabled] .btn-green-inverse.focus {
 
 @media only screen and ( max-width: 992px) {
   
+  .cover .btn {
+      display:block;
+      width:80%;
+   }
+
   #curriculum .btn {
     width:80%;
   }
@@ -598,13 +601,25 @@ fieldset[disabled] .btn-green-inverse.focus {
   #infobox-inner {
     font-size:25px;
   }
+
+
+  .cover-text h1 {
+    font-size: 50px;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+  }
+
+  .cover-text-secondary {
+    margin-bottom:20px;
+    font-size:18px; 
+  }
+
 }
 
 @media only screen and ( max-width: 510px) {
   
-  .cover h1 {
-    font-size:20px;
-  }
+  .cover .btn:nth-child(even) {
+      font-size:14px;
+   }
 
   #curriculum-hours {
     font-size:17px;
