--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,13 @@ body {
   padding-bottom:15px;
 }
 
+.button-landing-page {
+   display:block;
+  width:60%;
+  margin:0 auto;
+  margin-bottom:20px;
+}
+
 html,
 body,
 .cover {
@@ -93,12 +100,7 @@ h2 {
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
 }
 
-.cover .btn {
-  display:block;
-  width:60%;
-  margin:0 auto;
-  margin-bottom:20px;
-}
+
 
 
 
@@ -193,12 +195,7 @@ nav.navbar-default {
     padding-top:0px;
 }
 
-#curriculum .btn {
-  display:block;
-  width:60%;
-  margin:0 auto;
-  margin-bottom:20px;
-}
+
 
 /*--- Skills You'll Learn Section ---*/
 
@@ -259,12 +256,7 @@ nav.navbar-default {
   font-size:15px;
 }
 
-#testimonials .btn {
-  display:block;
-  width:60%;
-  margin:0 auto;
-  margin-bottom:20px;
-}
+
 
 /*--- FOOTER SECTION ---*/
 
@@ -550,18 +542,10 @@ fieldset[disabled] .btn-green-inverse.focus {
 
 @media only screen and ( max-width: 992px) {
   
-  .cover .btn {
-      display:block;
+  .button-landing-page {
       width:80%;
-   }
-
-  #curriculum .btn {
-    width:80%;
   }
-
-  #testimonials .btn{
-    width:80%;
-  }
+   
 
   #curriculum-hours {
     margin: 0 auto;
