edit curriculum section background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,7 +177,7 @@ body,
 ===============================*/
 
 #curriculum {
-    background: #F9FCFA;
+    background: #f5faf7;
     border-top: 2px solid #ddeee3;
     border-bottom: 2px solid #ddeee3;
 }
