--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,6 +130,11 @@ body,
    opacity: 0.5;
 }
 
+.press-coverage {
+  /*max-width:450px;*/
+  /*margin: 0 auto;*/
+}
+
 .press-coverage1 {
    padding:0;
 }
@@ -169,6 +174,10 @@ body,
 .howitworks h3 {
     text-align:center;
     font-size:20px;
+}
+
+.col-howitworks {
+  margin-bottom:30px;
 }
 
 
@@ -583,6 +592,11 @@ fieldset[disabled] .btn-green-inverse.focus {
    .button-landing-page {
       width:80%;
    }
+
+   .press-coverage {
+    max-width:450px;
+    margin: 0 auto;
+  }
    
    #curriculum-hours {
       margin: 0 auto;
